--- a/index.html
+++ b/index.html
@@ -31,30 +31,370 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="tty-table" class="anchor" href="#tty-table" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>tty-table</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p><a href="https://travis-ci.org/tecfu/tty-table"><img src="https://travis-ci.org/tecfu/tty-table.svg?branch=master" alt="Build Status"></a> <a href="https://david-dm.org/tecfu/tty-table"><img src="https://david-dm.org/tecfu/tty-table.png" alt="Dependency Status"></a> <a href="http://badge.fury.io/js/tty-table"><img src="https://badge.fury.io/js/tty-table.svg" alt="NPM version"></a> <a href="http://gruntjs.com/"><img src="https://cdn.gruntjs.com/builtwith.png" alt="Built with Grunt"></a></p>
+
+<p>A terminal table widget for nodejs and the browser.</p>
+
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
+
+<ul>
+<li>Nodejs</li>
+</ul>
+
+<pre><code>npm install tty-table
+</code></pre>
+
+<ul>
+<li>Browser (via browserify)</li>
+</ul>
+
+<pre><code>&lt;script src="tty-table.bundle.min.js"&gt;&lt;/script&gt;
+&lt;script&gt;
+    var Table = require('tty-table');
+    ...
+&lt;/script&gt;
+</code></pre>
+
+<h2>
+<a id="why" class="anchor" href="#why" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Why</h2>
+
+<ul>
+<li>Automatic text wrapping</li>
+<li>Colors (nodejs)</li>
+<li>Optional callbacks on column values</li>
+<li>Header, body column alignment</li>
+<li>Padding</li>
+<li>Pass rows as either arrays or objects</li>
+<li><a href="http://htmlpreview.github.io/?https://raw.githubusercontent.com/tecfu/tty-table/master/examples/browser-example.html">Works in the browser as well as nodejs</a></li>
+<li>
+<a href="https://github.com/tecfu/tty-table/pull/5">Supports Asian characters</a> </li>
+<li><a href="https://github.com/tecfu/tty-table/issues/4">Responsive</a></li>
+</ul>
+
+<h2>
+<a id="example-output" class="anchor" href="#example-output" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example Output</h2>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="terminal" class="anchor" href="#terminal" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Terminal</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p><img src="examples/images/node-example.png" alt="Terminal Example" title="Terminal Example"> </p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="browser--browser-console" class="anchor" href="#browser--browser-console" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Browser &amp; Browser Console</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><img src="examples/images/browser-example.png" alt="Browser Console Example" title="Browser Console Example"> </p>
+
+<p><a href="http://htmlpreview.github.io/?https://raw.githubusercontent.com/tecfu/tty-table/master/examples/browser-example.html">Working example</a></p>
+
+<blockquote>
+<p>Note that neither ASCI colors nor default borders are rendered in the browser.
+An alternative border style, as shown below, can be used by setting the option:</p>
+
+<pre><code>borderStyle : 2
+</code></pre>
+</blockquote>
+
+<h2>
+<a id="example-usage" class="anchor" href="#example-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Example Usage</h2>
+
+
+
+<pre><code>var Table = require('tty-table');
+var chalk = require('chalk');
+
+var header = [
+    {
+        value : "item",
+        headerColor : "cyan",
+        color: "yellow",
+        align : "left",
+        paddingRight : 5,
+        width : 30
+    },
+    {
+        value : "price",
+        color : "red", 
+        formatter : function(value){
+            var str = "$" + value.toFixed(2);
+            if(value &gt; 5){
+                str = chalk.underline.green(str);
+            }
+            return str;
+        }
+    },
+    {
+        alias : "Is organic?",  
+        value : "organic",
+        formatter : function(value){
+            if(value === 'yes'){
+                value = chalk.stripColor(value);
+                value = chalk.green(value);
+            }
+            else{
+                value = chalk.white.bgRed(value);
+            }
+            return value;
+        }
+    }
+];
+
+//Example with arrays as rows 
+var rows = [
+    ["hamburger",2.50,"no"],
+    ["el jefe's special cream sauce",0.10,"yes"],
+    ["two tacos, rice and beans topped with cheddar cheese",9.80,"no"],
+    ["apple slices",1.00,"yes"],
+    ["ham sandwich",1.50,"no"],
+    ["macaroni, ham and peruvian mozzarella",3.75,"no"]
+];
+
+var t1 = Table(header,rows,{
+    borderStyle : 1,
+    paddingBottom : 0,
+    headerAlign : "center",
+    align : "center",
+    color : "white"
+});
+
+str1 = t1.render();
+console.log(str1);
+
+
+//Example with objects as rows 
+var rows = [
+    {
+        item : "hamburger",
+        price : 2.50,
+        organic : "no"
+    },
+    {
+        item : "el jefe's special cream sauce",
+        price : 0.10,
+        organic : "yes"
+    },
+    {
+        item : "two tacos, rice and beans topped with cheddar cheese",
+        price : 9.80,
+        organic : "no"
+    },
+    {
+        item : "apple slices",
+        price : 1.00,
+        organic : "yes" 
+    },  
+    {
+        item : "ham sandwich",
+        price : 1.50,
+        organic : "no"
+    },
+    {
+        item : "macaroni, ham and peruvian mozzarella",
+        price : 3.75,
+        organic : "no"
+    }
+];
+
+var t2 = Table(header,rows,{
+    borderStyle : 1,
+    paddingBottom : 0,
+    headerAlign : "center",
+    align : "center",
+    color : "white"
+});
+
+var str2 = t2.render();
+console.log(str2);
+
+</code></pre>
+
+
+
+<h2>
+<a id="api-reference" class="anchor" href="#api-reference" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>API Reference</h2>
+
+
+
+<p><a name="Table"></a></p>
+
+<h2>
+<a id="table--table" class="anchor" href="#table--table" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Table ⇒ <code><a href="#Table">Table</a></code>
+</h2>
+
+<p><strong>Kind</strong>: global class<br>
+<strong>Note</strong>: <a name="note"></a>
+Default border character sets:</p>
+
+<pre><code>    [
+        [
+            {v: " ", l: " ", j: " ", h: " ", r: " "},
+            {v: " ", l: " ", j: " ", h: " ", r: " "},
+            {v: " ", l: " ", j: " ", h: " ", r: " "}
+        ],
+        [
+            {v: "│", l: "┌", j: "┬", h: "─", r: "┐"},
+            {v: "│", l: "├", j: "┼", h: "─", r: "┤"},
+            {v: "│", l: "└", j: "┴", h: "─", r: "┘"}
+        ],
+        [
+            {v: "|", l: "+", j: "+", h: "-", r: "+"},
+            {v: "|", l: "+", j: "+", h: "-", r: "+"},
+            {v: "|", l: "+", j: "+", h: "-", r: "+"}
+        ]
+    ]
+</code></pre>
+
+<table>
+<thead>
+<tr>
+<th>Param</th>
+<th>Type</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>header</td>
+<td><code>array</code></td>
+<td><a href="#example-usage">See example</a></td>
+</tr>
+<tr>
+<td>header.column</td>
+<td><code>object</code></td>
+<td>Column options</td>
+</tr>
+<tr>
+<td>header.column.formatter</td>
+<td><code>function</code></td>
+<td>Runs a callback on each cell value in the parent column</td>
+</tr>
+<tr>
+<td>header.column.marginLeft</td>
+<td><code>number</code></td>
+<td>default: 0</td>
+</tr>
+<tr>
+<td>header.column.marginTop</td>
+<td><code>number</code></td>
+<td>default: 0</td>
+</tr>
+<tr>
+<td>header.column.maxWidth</td>
+<td><code>number</code></td>
+<td>default: 20</td>
+</tr>
+<tr>
+<td>header.column.paddingBottom</td>
+<td><code>number</code></td>
+<td>default: 0</td>
+</tr>
+<tr>
+<td>header.column.paddingLeft</td>
+<td><code>number</code></td>
+<td>default: 0</td>
+</tr>
+<tr>
+<td>header.column.paddingRight</td>
+<td><code>number</code></td>
+<td>default: 0</td>
+</tr>
+<tr>
+<td>header.column.paddingTop</td>
+<td><code>number</code></td>
+<td>default: 0</td>
+</tr>
+<tr>
+<td>header.column.alias</td>
+<td><code>string</code></td>
+<td>Alernate header column name</td>
+</tr>
+<tr>
+<td>header.column.align</td>
+<td><code>string</code></td>
+<td>default: "center"</td>
+</tr>
+<tr>
+<td>header.column.color</td>
+<td><code>string</code></td>
+<td>default: terminal default color</td>
+</tr>
+<tr>
+<td>header.column.headerAlign</td>
+<td><code>string</code></td>
+<td>default: "center"</td>
+</tr>
+<tr>
+<td>header.column.headerColor</td>
+<td><code>string</code></td>
+<td>default: terminal default color</td>
+</tr>
+<tr>
+<td>rows</td>
+<td><code>array</code></td>
+<td><a href="#example-usage">See example</a></td>
+</tr>
+<tr>
+<td>options</td>
+<td><code>object</code></td>
+<td>Table options</td>
+</tr>
+<tr>
+<td>options.borderStyle</td>
+<td><code>number</code></td>
+<td>default: 1 (0 = no border)  Refers to the index of the desired character set.</td>
+</tr>
+<tr>
+<td>options.borderCharacters</td>
+<td><code>array</code></td>
+<td><a href="#note">See @note</a></td>
+</tr>
+</tbody>
+</table>
+
+<p><strong>Example</strong>  </p>
+
+<pre><code>var Table = require('tty-table');
+Table(header,rows,options);
+</code></pre>
+
+<p><a name="Table.render"></a></p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="tablerender--string" class="anchor" href="#tablerender--string" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Table.render() ⇒ <code>String</code>
+</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Renders a table to a string</p>
+
+<p><strong>Kind</strong>: static method of <code><a href="#Table">Table</a></code><br>
+<strong>Example</strong>  </p>
+
+<pre><code>var str = t1.render(); 
+console.log(str); //outputs table
+</code></pre>
+
+
+
+<h2>
+<a id="running-tests" class="anchor" href="#running-tests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Running tests</h2>
+
+<pre><code>grunt test
+</code></pre>
+
+<h2>
+<a id="saving-the-output-of-new-tests" class="anchor" href="#saving-the-output-of-new-tests" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Saving the output of new tests</h2>
+
+<pre><code>grunt st
+</code></pre>
+
+<h2>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
+
+<p><a href="http://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3 License</a></p>
+
+<p>Copyright 2015, Tecfu. </p>
       </section>
     </div>
 
